minor changes to index

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,11 +8,12 @@
     <body>
         <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item">
+                <a  href="/" class="header item">
                    <i class="game icon"></i>
                     Gaming Blog
-                </div>
-                <a href="/" class="item">Home</a>
+                </a>
+                
+                
                 <a href="/blogs/new" class="item">New Post</a>
                     <a href="/login" class="item right">Login</a>
                     <a href="/register" class="item">Sign Up!</a>
