first try for responsive

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                 <div class="extra">
                     <a class="ui floated basic violet button" href="/blogs/<%= blog._id %>">
                         Read More
-                        <i class="right chevron icon"></i>
+                        <!--<i class="right chevron icon"></i>-->
                     </a>    
                 </div>
                 </div>
