--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,11 @@
         <title>Gaming Blog</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     </head>
     <body>
-        <div class="ui fixed inverted menu">
+        <div class="ui inverted menu fixed">
             <div class="ui container">
                 <a  href="/" class="header item">
                    <i class="game icon"></i>
